[package]
name = "tftp_server"
version = "0.3.1"
authors = ["Darin Minamoto <darinm223@gmail.com>", "Alexandru Macovei <alexnmaco@gmail.com>"]
description = "A TFTP server implementation in Rust using mio"
repository = "https://github.com/DarinM223/tftp-server"
readme = "README.md"
keywords = ["network", "tftp", "protocol", "mio"]
license = "MIT"

[dependencies]
mio = "0.6"
byteorder = "1.0"
log = "0.3.6"
env_logger = "0.4"
clap = "2.25"
mio-more = { git = "https://github.com/carllerche/mio-more.git" }

[dev-dependencies]
env_logger = "0.4"

[lib]
name = "tftp_server"
path = "src/lib.rs"

[[bin]]
name = "tftp_server_bin"
path = "src/bin.rs"

[[test]]
name = "tftp-server-tests"
path = "tests/test_server.rs"
harness = false
