[package]
name = "tftp_server"
version = "0.4.0"
authors = ["Darin Minamoto <darinm223@gmail.com>", "Alexandru Macovei <alexnmaco@gmail.com>"]
description = "A TFTP server implementation in Rust using mio"
repository = "https://github.com/alexmaco/tftp-server"
readme = "README.md"
keywords = ["network", "tftp", "protocol", "mio"]
license = "MIT/GPLv3"

[dependencies]
mio = "0.6"
byteorder = "1"
log = "0.3"
env_logger = "0.4"
clap = "2"
mio-more = "0.1"

[dev-dependencies]
env_logger = "0.4"
assert_matches = "1"

[lib]
name = "tftp_server"
path = "src/lib.rs"

[[bin]]
name = "tftp_server_bin"
path = "src/bin.rs"

[[test]]
name = "tftp-server-tests"
path = "tests/test_server.rs"
harness = false
