[package]
name = "tftp_server"
version = "0.0.3"
authors = ["Darin Minamoto <darinm223@gmail.com>"]
description = "A TFTP server implementation in Rust using mio"
repository = "https://github.com/DarinM223/tftp-server"
readme = "README.md"
keywords = ["network", "tftp", "protocol", "mio"]
license = "MIT"
edition = "2018"

[dependencies]
mio = "0.6"
mio-extras = "2.0.5"
rand = "0.3"
byteorder = "0.5"
log = "0.4.8"
env_logger = "0.3.5"

[dev-dependencies]
env_logger = "0.3.5"
getopts = "0.2"

[lib]
name = "tftp_server"
path = "src/lib.rs"

[[test]]
name = "tftp-packet-tests"
path = "tests/test_packet.rs"

[[test]]
name = "tftp-server-tests"
path = "tests/test_server.rs"
harness = false
